WIP: Move KeyArchetype.getProperties() to KeyTemplate
This is the sole user (sans tests), move the method there, removing
one user of GeneratedProperty from binding-model.

// FIXME: update generator tests to assert the raw shape

JIRA: YANGTOOLS-1578
Change-Id: I2d5bd47fed2ef7d3bb79651855c38f0986012010
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>